# credit-scoring-mlops

./: .gitignore  main.py  pyproject.toml
notebooks/: 1_eda.ipynb  2_preprocessing.ipynb  3_modeling.ipynb  4_optimization.ipynb
src/: modelization.py  preprocessing.py  test_serving.py  utils.py  visualizer.py
