[project]
name = "credit-scoring-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "mlflow>=2.14.0",
    "numpy>=2.4.2",
    "pandas>=2.2.0,<3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
credit-scoring-mlops = { workspace = true, editable = true }

[dependency-groups]
dev = [
    "credit-scoring-mlops",
]
